Added footer componenet, footer content, some css

--- a/src/App.css
+++ b/src/App.css
@@ -2218,3 +2218,29 @@ a {
     font-size: 14px;
   }
 }
+
+
+/* *******************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+**********************************************************************
+******************** Fotter Body Begin *****************************8 */
+
+.footer-container {
+  height: 200px;
+  width: 100%;
+  background: linear-gradient(180deg, #2c003e, #297574);
+  color: hsl(240deg, 100%, 96%);
+  position: relative;
+}
+
+
+.footer-content {
+  padding-top: 30px;
+  padding-left: 120px;
+  padding-right: 120px;
+  position: relative;
+}
